Fix formatting on IE

--- a/client/src/search/EverythingSearch.scss
+++ b/client/src/search/EverythingSearch.scss
@@ -2,7 +2,7 @@
 
 .everything-search-options {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-around;
 }
