--- a/client/src/search/Typeahead/Typeahead.scss
+++ b/client/src/search/Typeahead/Typeahead.scss
@@ -67,6 +67,7 @@
   font-size: 1.4em;	
   line-height: 1.8em;	
   cursor: pointer;	
+  display: block;
 
   &:not(:first-child) {	
     border-top: 1px solid $separatorColor;	
